@@ -3,6 +3,7 @@ v2.4
 
  - Added option for lossless JPEG cropping
  - Added JPEG quality slider setting
+ - Added option for rule of thirds guideline
  - Tweaked some info text in settings
 
 v2.3
